week 10 - jul 13 - 19/errorJuly21

In [141]: galIDs[1190700:1190749]
Out[141]: 
array([6406616760539463890, 6406616760539463987, 6406616760539464105,
       6406616760539464105, 6406616760539464105, 6406616760539464105,
       6406616760539464170, 6406616760539464170, 6406616760539464170,
       6406616760539464170, 6406616760539480416, 6406616760539517667,
       6406616760539517667, 6406616760539517667, 6406616760539517667,
       6406616760539517722, 6406616760539517722, 6406616760539517722,
       6406616760539517803, 6406616760539517803, 6406616760539517803,
       6406616760539517803, 6406616760539517955, 6406616760539517955,
       6406616760539517955, 6406616760539517955, 6406616760539517955,
       6406616760539566873, 6406616760540470172, 6406616760540470172,
       6406616760540470172, 6406616760540470172, 6406616760540474428,
       6406616760540474428, 6406616760540493426, 6406616760540493426,
       6406616760540493426, 6406616760540493426, 6406616760540512346,
       6406616760540512346, 6406616760540847560, 6406616760540847560,
       6406616760540847560, 6406616760540990529, 6406616760541770530,
       6406616760541770530, 6406616760541770530, 6406616760541770530,
       6406616760543038193])

In [142]: uniqueGalIDinRadius
Out[142]: 
array([  6.10010810e+18,   6.10010810e+18,   6.10010810e+18,
         6.10010810e+18,   6.10010810e+18,   6.10010810e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.10010810e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08205852e+18,   6.08205852e+18,   6.10010810e+18,
         6.10010810e+18,   6.10010810e+18,   6.10010810e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.08207611e+18,   6.08207611e+18,
         6.08207611e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.10009051e+18,
         6.10009051e+18,   6.10009051e+18,   6.08205852e+18,
         6.08205852e+18,   6.08205852e+18,   6.08205852e+18,
         6.08205852e+18,   6.08205852e+18,   6.08205852e+18,
         6.08205852e+18])

In [143]: indexInRadius  = np.in1d(galIDs,uniqueGalIDinRadius)

In [144]: len(galIDs)
Out[144]: 1190749

In [145]: len(uniqueGalIDinRadius)
Out[145]: 178

In [146]: len(inde)
index          indexInRadius  

In [146]: len(indexInRadius)
Out[146]: 1190749

In [147]: raGalInRadius  = raGal[indexInRadius]

In [148]: len(raGalInRadius)
Out[148]: 1023175

In [149]: len(raGal\)
  File "<ipython-input-149-0c50bb3cccf4>", line 1
    len(raGal\)
               ^
SyntaxError: unexpected character after line continuation character


In [150]: len(raGal)
Out[150]: 1190749

In [151]: param = packParameterList[56]



------------------------------------------------------------------


uniqueGalIDinRadius[3]
Out[152]: 6.1001081030887782e+18

In [153]: k = np.in1d(galIDs, uniqueGalIDinRadius[3])

In [154]: k
Out[154]: array([False, False, False, ..., False, False, False], dtype=bool)

In [155]: len(galIDs[k])
Out[155]: 39

In [156]: 
